actix-web-thiserror/tests/compile-fail/response-unknown-option.stderr
error: proc-macro derive panicked
 --> tests/compile-fail/response-unknown-option.rs:4:24
  |
4 | #[derive(Debug, Error, ResponseError)]
  |                        ^^^^^^^^^^^^^
  |
  = help: message: Unknown #[response] option: unknown_param
